--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="hero-text">
                     <h1 class="hero-name">Trevor Wiseman</h1>
                     <h2 class="hero-title">VP of Technology | AI & Cybersecurity Leader | LinkedIn Influencer</h2>
-                    <p class="hero-tagline">Transforming technology landscapes through innovative leadership and strategic vision. 25+ years of experience driving digital transformation in broadcast media and enterprise technology.</p>
+                    <p class="hero-tagline">Transforming technology landscapes through innovative leadership and strategic vision. 25+ Years | Enterprise Technology Transformation | Solutions Leadership | Security Awareness.</p>
                     <div class="hero-stats">
                         <div class="stat">
                             <span class="stat-number">1,464</span>
