--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
-            <h2>About Trevor</h2>
+            <h2>About</h2>
             <div class="about-grid">
                 <div class="about-text">
-                    <p>As Vice President of Technology at Griffin Media, Trevor Wiseman brings over 25 years of technology leadership experience to the forefront of broadcast media innovation. His expertise spans artificial intelligence, cybersecurity, and enterprise technology transformation.</p>
-                    <p>Trevor has established himself as a thought leader in the intersection of traditional broadcast media and cutting-edge technology, helping organizations navigate the complex landscape of digital transformation while maintaining operational excellence.</p>
+                    <p>As Vice President of Technology at Griffin Media, I bring over 25 years of technology leadership experience to the forefront of broadcast media innovation. My expertise spans artificial intelligence, cybersecurity, and enterprise technology transformation.</p>
+                    <p>I have established myself as a thought leader in the intersection of traditional broadcast media and cutting-edge technology, helping organizations navigate the complex landscape of digital transformation while maintaining operational excellence.</p>
                 </div>
                 <div class="achievements">
                     <h3>Key Achievements</h3>
