--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="hero-image">
                     <div class="headshot-placeholder">
                        <div class="headshot-container">
-    <img src="1747616511122.png" width="250" height="375" viewBox="0 0 250 250" alt="Trevor Wiseman - VP of Technology" class="headshot-image">
+    <img src="trevorprofile.png" width="250" height="375" viewBox="0 0 250 250" alt="Trevor Wiseman - VP of Technology" class="headshot-image">
 </div>
 
                         </div>
