--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <link rel="manifest" href="manifest.json">
 <title>Trevor Wiseman - LinkedIn Creator Media Kit</title>
 <link href="style.css" rel="stylesheet"/>
-<meta content="Trevor Wiseman | VP of Technology at Griffin Media | AI &amp; Cybersecurity Leader | LinkedIn Creator Media Kit" name="description"/><meta content="Trevor Wiseman, VP Technology, Griffin Media, AI, Cybersecurity, LinkedIn, Broadcast, Speaker, Influencer" name="keywords"/><meta content="Trevor Wiseman - LinkedIn Creator Media Kit" property="og:title"/><meta content="Transforming technology landscapes with AI and cybersecurity leadership. View Trevor Wiseman’s creator media kit." property="og:description"/><meta content="trevorprofile.jpg" property="og:image"/><meta content="https://thecircuit-techpulse.github.io/trevorw/" property="og:url"/><script type="application/ld+json">
+<meta content="Trevor Wiseman | VP of Technology at Griffin Media | AI &amp; Cybersecurity Leader | LinkedIn Creator Media Kit" name="description"/><meta content="Trevor Wiseman, VP Technology, Griffin Media, AI, Cybersecurity, LinkedIn, Broadcast, Speaker, Influencer" name="keywords"/><meta content="Trevor Wiseman - LinkedIn Creator Media Kit" property="og:title"/><meta content="Transforming technology landscapes with AI and cybersecurity leadership. View Trevor Wiseman’s creator media kit." property="og:description"/><meta content="trevorprofile.png" property="og:image"/><meta content="https://thecircuit-techpulse.github.io/trevorw/" property="og:url"/><script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Person",
   "name": "Trevor Wiseman",
   "url": "https://thecircuit-techpulse.github.io/trevorw/",
-  "image": "trevorprofile.jpg",
+  "image": "trevorprofile.png",
   "jobTitle": "VP of Technology",
   "worksFor": {
     "@type": "Organization",
@@ -47,7 +47,7 @@
 <div class="hero-image">
 <div class="headshot-placeholder">
 <div class="headshot-container">
-<img alt="Trevor Wiseman - VP of Technology" class="headshot-image" height="250" src="trevorprofile.jpg" viewbox="0 0 250 250" width="250"/>
+<img alt="Trevor Wiseman - VP of Technology" class="headshot-image" height="250" src="trevorprofile.png" viewbox="0 0 250 250" width="250"/>
 </div>
 </div>
 </div>
