--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   "@type": "Person",
   "name": "Trevor Wiseman",
   "url": "https://thecircuit-techpulse.github.io/trevorw/",
-  "image": "twprofile.png",
+  "image": "profile.jpeg",
   "jobTitle": "VP of Technology",
   "worksFor": {
     "@type": "Organization",
@@ -47,7 +47,7 @@
 <div class="hero-image">
 <div class="headshot-placeholder">
 <div class="headshot-container">
-<img alt="Trevor Wiseman - VP of Technology" class="headshot-image" height="250" src="twprofile.png" viewbox="0 0 250 250" width="250"/>
+<img alt="Trevor Wiseman - VP of Technology" class="headshot-image" height="250" src="profile.jpeg" viewbox="0 0 250 250" width="250"/>
 </div>
 </div>
 </div>
